<resources>
    <string name="app_name">Meal Planit</string>
    <string name="title_home">Home</string>
    <string name="title_plan">Plan</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_browse">Browse</string>
    <string name="title_account">Account</string>

    <string name="add_meal">Add</string>
    <string name="meal_text">meal</string>
    <string name="snack_text">snack</string>
    <string name="ingredients_text">ingredients</string>
    <string name="food_text">planRestriction</string>
    <string name="welcome_label">Welcome to Meal Planit</string>
    <string name="account_name">firstName lastName</string>
    <string name="username_text">username</string>
    <string name="title_activity_login">Sign in</string>

  <string name="enter_username_text">Enter Username:</string>
    <string name="enter_username_text_field">Username</string>
  <string name="welcome_text_account">Welcome</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="username_title">Username</string>
    <string name="target_daily_calories_title">Target daily calories</string>
    <string name="allergies_title">Allergies</string>
    <string name="diet_title">Diet</string>
    <string name="submit_button">Submit</string>
  <string name="base_url">https://spoonacular-recipe-food-nutrition-v1.p.mashape.com/recipes/mealplans/</string>
  <string name="generate_button">Generate</string>
  <string name="REGEX_FOR_EXTENSION">\\.[^.\\s]+$</string>
  <string name="change_picture_button_text">change picture</string>
  <string name="change_username_text">Confirm Username or Enter New Username if you wish to change settings below</string>
  <string name="change_calories_text">Change Calories</string>
  <string name="change_diet_text">Change Diet</string>
  <string name="change_allergies_text">Change Allergies</string>
  <string name="home_toolbar_button">Home</string>
  <string name="settings_toolbar_menu">Settings</string>
  <string name="update_settings_button">Update Settings</string>
  <string name="recipe_url">https://spoonacular-recipe-food-nutrition-v1.p.mashape.com/</string>
  <string name="url_id">https://spoonacular.com/recipeImages/%1$s-480x360%2$s</string>
  <string name="fields_snackbar">Please make sure all fields are completed</string>
  <string name="user_exists_snackbar">Username Already Exists</string>
  <string name="account_created_snackbar">Account Created</string>
  <string name="login_not_found_snackbar">Username not found</string>
  <string name="recipe_not_found_text">Recipe could not be displayed</string>
  <string name="confirm_username_text">Please confirm username or enter new username</string>
  <string name="could_not_upload">Could not upload picture, try again.</string>
  <string name="settings_success">Settings Updated</string>
  <string-array name="kilo_calories_intake_value"><item>1200</item> <item>1300</item> <item>1400</item> <item>1500</item>
    <item>1600</item> <item>1700</item> <item>1800</item> <item>1900</item> <item>2000</item> <item>2100</item> <item>2200</item>
    <item>2300</item> <item>2400</item> <item>2500</item> <item>2600</item> <item>2700</item> <item>2800</item> <item>2900</item>
    <item>3000</item> <item>3100</item> <item>3200</item></string-array>

</resources>
