<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/filter_list"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">


  <Button
    android:id="@+id/image_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/change_picture_button_text"/>

  <TextView
    android:id="@+id/username_change"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/change_username_text"
    android:textSize="20sp"/>

  <TextView
    android:id="@+id/change_calories"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/change_calories_text"
    android:textSize="20sp"
    />

  <TextView
    android:id="@+id/change_diet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/change_diet_text"
    android:textSize="20sp"
    />

  <TextView
    android:id="@+id/change_allergies"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/change_allergies_text"
    android:textSize="20sp"
    />



</LinearLayout>
